--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodeForge++ | Portfolio</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
@@ -27,7 +27,6 @@
           <li><a href="resources.html" class="nav-link">Resources</a></li>
         </ul>
       </nav>
-      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
@@ -35,8 +34,7 @@
     <h1 style="text-align:center;">Meet the Developer</h1>
     <p style="max-width:800px; margin:0 auto 30px; text-align:center;">
       Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform
-      is my advanced learning and portfolio demonstration, bridging real-time embedded topics
-      with modern C++ for a professional, interview-focused skill set.
+      is my advanced learning and portfolio demonstration—bridging real‑time embedded topics with modern C++ for a professional, interview‑focused skill set.
     </p>
 
     <div class="portfolio-highlights" style="margin-top:10px;">
@@ -45,48 +43,47 @@
         <ul>
           <li>B.Sc. in Computer Science</li>
           <li>10+ years in embedded software development</li>
-          <li>Expertise in real-time systems, OS internals</li>
+          <li>Expertise in real‑time systems and OS internals</li>
         </ul>
       </div>
       <div class="highlight-card glass card-hover floating-card">
         <h2>Focus Areas</h2>
         <ul>
-          <li>Low-level C/C++ programming</li>
-          <li>Multi-threading and concurrency</li>
-          <li>Performance tuning & memory optimization</li>
+          <li>Low‑level C/C++ programming</li>
+          <li>Multithreading and concurrency</li>
+          <li>Performance tuning &amp; memory optimization</li>
         </ul>
       </div>
       <div class="highlight-card glass card-hover floating-card">
         <h2>Project Goals</h2>
         <ul>
-          <li>Offer advanced modules for tough C++ interviews</li>
-          <li>In-browser IDE & solution checking</li>
-          <li>Showcase my professional portfolio & background</li>
+          <li>Offer advanced modules for challenging C++ interviews</li>
+          <li>In‑browser IDE with real‑time solution checking</li>
+          <li>Showcase a professional portfolio and technical background</li>
         </ul>
       </div>
     </div>
 
-    <!-- Resume + GitHub/LinkedIn icons -->
     <div style="margin-top:40px; text-align:center;">
       <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
       <a href="resume.html" class="icon-btn" title="View Resume">
-        <img src="https://img.icons8.com/material-outlined/24/ffffff/resume.png" alt="Resume Icon"/>
+        <img src="https://img.icons8.com/material-outlined/24/ffffff/resume.png" alt="Resume Icon">
       </a>
     </div>
 
     <div style="margin-top:30px; text-align:center;">
-      <p style="margin-bottom:10px;">Connect with me on GitHub & LinkedIn:</p>
+      <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
       <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
-        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" alt="GitHub" style="filter: invert(100%); width:28px;"/>
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/github.svg" alt="GitHub" style="filter: invert(100%); width:28px;">
       </a>
       <a href="https://www.linkedin.com/in/ohad-alon" target="_blank" class="icon-btn" title="LinkedIn">
-        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" style="filter: invert(100%); width:28px;"/>
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/linkedin.svg" alt="LinkedIn" style="filter: invert(100%); width:28px;">
       </a>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
