--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CodeForge++ | Quiz</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
@@ -28,16 +28,14 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
-      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
   <main class="page-content fade-in">
     <section class="glass" style="max-width:800px; margin:0 auto;">
       <h1>Interview Quiz</h1>
-      <p id="quiz-intro">Lesson-based quiz with a timer and local leaderboard!</p>
+      <p id="quiz-intro">Lesson‑based quiz with a timer and local leaderboard!</p>
 
-      <!-- Timer + Container -->
       <div class="quiz-timer" id="quiz-timer">Time: 00:00</div>
       <div id="quiz-container" class="quiz-container"></div>
 
@@ -46,7 +44,6 @@
 
       <div id="quiz-result" style="margin-top:20px; font-weight:bold;"></div>
 
-      <!-- Leaderboard -->
       <div class="leaderboard" id="leaderboard" style="display:none;">
         <h2>Local Leaderboard</h2>
         <div id="leaderboard-entries"></div>
@@ -55,7 +52,7 @@
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
