--- a/resources.html
+++ b/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodeForge++ | Resources</title>
   <link rel="stylesheet" href="styles/enhanced_styles.css">
   <link rel="stylesheet" href="styles/animations.css">
@@ -27,7 +27,6 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
-      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
     </div>
   </header>
 
@@ -40,26 +39,26 @@
     <div class="resource-list" style="margin-top:30px;">
       <div class="resource-item glass card-hover floating-card">
         <h2>cppreference.com</h2>
-        <p>Comprehensive doc on C++ language features, STL, and more.</p>
+        <p>Comprehensive documentation on C++ language features and STL.</p>
         <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
       </div>
 
       <div class="resource-item glass card-hover floating-card">
         <h2>isocpp.org</h2>
-        <p>Official C++ standardization info, plus modern guidelines and articles.</p>
+        <p>Official C++ standardization info, guidelines, and articles.</p>
         <a href="https://isocpp.org" target="_blank" class="btn">View Site</a>
       </div>
 
       <div class="resource-item glass card-hover floating-card">
         <h2>Learn C++</h2>
-        <p>A helpful site with advanced tutorials on modern C++ concepts.</p>
+        <p>Advanced tutorials and resources on modern C++.</p>
         <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
       </div>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
