--- a/exercises.html
+++ b/exercises.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/enhanced_styles.css" />
   <link rel="stylesheet" href="styles/animations.css" />
 </head>
+<!-- The theme is applied based on localStorage (default: dark-theme) -->
 <body class="dark-theme">
   <header class="glass header-slide-in compact-header">
     <div class="nav-container">
@@ -27,61 +28,61 @@
           <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         </ul>
       </nav>
-      <button id="theme-toggle" class="btn" style="margin-left:20px;">Switch Theme</button>
+      <!-- Note: No theme toggle button on non‑index pages -->
     </div>
   </header>
 
   <main class="page-content fade-in exercise-list">
     <h1 style="text-align:center;">Advanced C++ Interview Syllabus</h1>
     <p style="text-align:center; max-width:800px; margin:0 auto 30px;">
-      Choose a module below to see thorough lessons, a collapsible timeline, advanced tasks, and integrated media.
+      Choose a module below to explore thorough lessons, interactive timelines, advanced tasks, and integrated media.
     </p>
 
     <div class="course-module glass">
-      <h2>Module 1: Foundations & Modern Features</h2>
-      <p>RAII, smart pointers, lambdas, advanced C++11/14/17 features.</p>
+      <h2>Module 1: Foundations &amp; Modern Features</h2>
+      <p>RAII, smart pointers, lambdas, and advanced C++11/14/17 features.</p>
       <a href="module1.html" class="btn lesson-btn">Go to Module 1</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 2: Data Structures & Algorithms</h2>
-      <p>Complexities, searching/sorting, BFS/DFS, puzzle challenges.</p>
+      <h2>Module 2: Data Structures &amp; Algorithms</h2>
+      <p>Algorithm complexities, searching/sorting, BFS/DFS, and challenging puzzles.</p>
       <a href="module2.html" class="btn lesson-btn">Go to Module 2</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 3: Real-Time & Embedded</h2>
-      <p>RTOS, concurrency in embedded, interrupts, hardware debugging.</p>
+      <h2>Module 3: Real‑Time &amp; Embedded Systems</h2>
+      <p>RTOS, embedded concurrency, interrupts, and hardware debugging.</p>
       <a href="module3.html" class="btn lesson-btn">Go to Module 3</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 4: Concurrency & Multithreading</h2>
-      <p>Threads, mutexes, lock-free data structures, advanced concurrency patterns.</p>
+      <h2>Module 4: Concurrency &amp; Multithreading</h2>
+      <p>Threads, mutexes, lock‑free data structures, and advanced concurrency patterns.</p>
       <a href="module4.html" class="btn lesson-btn">Go to Module 4</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 5: Memory Management & Debugging</h2>
-      <p>Manual vs. smart pointers, custom allocators, valgrind, GDB usage.</p>
+      <h2>Module 5: Memory Management &amp; Debugging</h2>
+      <p>Manual versus smart pointers, custom allocators, and effective debugging with Valgrind/GDB.</p>
       <a href="module5.html" class="btn lesson-btn">Go to Module 5</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 6: Templates & Metaprogramming</h2>
-      <p>SFINAE, type traits, advanced compile-time programming tricks.</p>
+      <h2>Module 6: Templates &amp; Metaprogramming</h2>
+      <p>SFINAE, type traits, and advanced compile‑time programming techniques.</p>
       <a href="module6.html" class="btn lesson-btn">Go to Module 6</a>
     </div>
 
     <div class="course-module glass">
-      <h2>Module 7: System Design & Advanced Topics</h2>
-      <p>Design patterns, high-level architecture, common interview scenarios.</p>
+      <h2>Module 7: System Design &amp; Advanced Topics</h2>
+      <p>Design patterns, high‑level architecture, and common interview scenarios.</p>
       <a href="module7.html" class="btn lesson-btn">Go to Module 7</a>
     </div>
   </main>
 
   <footer>
-    <p>© 2025 CodeForge++. Developer & Owner: Ohad Alon. All rights reserved.</p>
+    <p>© 2025 CodeForge++. Developer &amp; Owner: Ohad Alon. All rights reserved.</p>
   </footer>
 
   <script src="scripts/main.js"></script>
